--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shubham</title>
+    <title>AWS Cloud Club Nepal</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
@@ -11,7 +11,7 @@
     <!-- navbar -->
     <header>
       <nav>
-        <h1><a href="#Shubham" style="text-decoration: none">Shubham</a></h1>
+        <h1><a href="#AWS Cloud Club Nepal" style="text-decoration: none">AWS Cloud Club Nepal</a></h1>
         <ul class="nav-links">
           <li><a href="#about-us">About Us</a></li>
           <li><a href="#features">Features</a></li>
@@ -37,7 +37,7 @@
       <section class="hero_section" id="hero_section">
         <div class="hero-text">
           <h1 style="font-size: 48px">
-            Welcome to <span class="header_green_text">Shubham</span>
+            Welcome to <span class="header_green_text">AWS Cloud Club Nepal</span>
           </h1>
           <p>Improve your business efficiently<br />with a powerful CRM</p>
           <a href="#download" class="explore-btn">Download</a>
@@ -54,10 +54,10 @@
       <section class="aboutus" id="about-us">
         <h1 style="font-size: 48px">About Us</h1>
         <p class="aboutus-text">
-          Shubham CRM is a customer relationship management platform built to
+          AWS Cloud Club Nepal CRM is a customer relationship management platform built to
           help businesses of all sizes streamline their sales, marketing, and
           support operations. With a focus on simplicity, efficiency, and
-          intelligent automation, Shubham empowers teams to build lasting
+          intelligent automation, AWS Cloud Club Nepal empowers teams to build lasting
           customer relationships and drive business growth.
         </p>
         <!-- <button class="learn-more-btn">Learn More</button> -->
@@ -96,7 +96,7 @@
       <section class="download" id="download">
         <h2>Download Now</h2>
         <p class="download-p">
-          Get started with Shubham CRM today and transform your business!
+          Get started with AWS Cloud Club Nepal CRM today and transform your business!
         </p>
         <div class="download-section">
           <!-- download Card -->
@@ -108,9 +108,9 @@
               />
             </div>
             <div class="card-content">
-              <p class="card-content-p">Simplify your day with Shubham</p>
+              <p class="card-content-p">Simplify your day with AWS Cloud Club Nepal</p>
               <h1 style="font-size: 30px; margin-bottom: 20px">
-                Download Shubham
+                Download AWS Cloud Club Nepal
               </h1>
               <p style="margin-bottom: 20px">Available for Android</p>
             </div>
@@ -126,9 +126,9 @@
               />
             </div>
             <div class="card-content">
-              <p class="card-content-p">Simplify your day with Shubham</p>
+              <p class="card-content-p">Simplify your day with AWS Cloud Club Nepal</p>
               <h1 style="font-size: 30px; margin-bottom: 20px">
-                Download Shubham
+                Download AWS Cloud Club Nepal
               </h1>
               <p style="margin-bottom: 20px">Available for iOS</p>
             </div>
@@ -145,9 +145,9 @@
               />
             </div>
             <div class="card-content">
-              <p class="card-content-p">Simplify your day with Shubham</p>
+              <p class="card-content-p">Simplify your day with AWS Cloud Club Nepal</p>
               <h1 style="font-size: 40px; margin-bottom: 20px">
-                Download Shubham
+                Download AWS Cloud Club Nepal
               </h1>
               <p style="margin-bottom: 20px">
                 Available for Mac, iOS, and Android
@@ -157,11 +157,11 @@
             <div class="dropdown-button">
               <div class="dropdown" id="dropdown">
                 <div class="dropdown-select" id="dropdownSelect">
-                  Shubham For Android ▾
+                  AWS Cloud Club Nepal For Android ▾
                 </div>
                 <div class="dropdown-options" id="dropdownOptions">
-                  <div>Shubham For Android</div>
-                  <div>Shubham For iOS</div>
+                  <div>AWS Cloud Club Nepal For Android</div>
+                  <div>AWS Cloud Club Nepal For iOS</div>
                 </div>
               </div>
               <button class="download-section-button" onclick="">Download Now</button>
@@ -178,7 +178,7 @@
             Let's illuminate the path for the connections
           </p>
           <div>
-            <a href="https://amatyalabs.com/" class="contact-email">shubham@shubham.com</a>
+            <a href="https://amatyalabs.com/" class="contact-email">AWS Cloud Club Nepal@AWS Cloud Club Nepal.com</a>
           </div>
         </div>
       </section>
@@ -188,26 +188,26 @@
     <footer>
       <div class="footer">
         <div class="footer-left">
-          <h1>Shubham</h1>
+          <h1>AWS Cloud Club Nepal</h1>
           <p>Transforming Data Into Meaningful Connections.</p>
         </div>
         <div class="footer-links">
           <div class="column">
-            <h2>Shubham</h2>
+            <h2>AWS Cloud Club Nepal</h2>
             <a href="#hero_section">Home</a>
             <a href="#aboutus">About Us</a>
             <a href="#contact">Contact</a>
             <a href="#download">Download Now</a>
           </div>
           <div class="column">
-            <h2 style="visibility: hidden">Shubham</h2>
+            <h2 style="visibility: hidden">AWS Cloud Club Nepal</h2>
             <a href="#">Home</a>
             <a href="#">About Us</a>
             <a href="#">Contact</a>
             <a href="#">Download Now</a>
           </div>
           <div class="column">
-            <h2 style="visibility: hidden">Shubham</h2>
+            <h2 style="visibility: hidden">AWS Cloud Club Nepal</h2>
             <a href="#">Home</a>
             <a href="#">About Us</a>
             <a href="#">Contact</a>
@@ -215,7 +215,7 @@
           </div>
         </div>
       </div>
-      <div class="reserved">2024 Shubham &copy; | All rights reserved.</div>
+      <div class="reserved">2024 AWS Cloud Club Nepal &copy; | All rights reserved.</div>
     </footer>
     <script src="js/index.js"></script>
   </body>
